	PR tree-optimization/92644 	* tree-ssa-phiopt.c (minmax_replacement): Add INTEGRAL_TYPE_P check 	next to INTEGER_CST checks.

* g++.dg/opt/pr92644.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@278720 138bc75d-0d04-0410-961f-82ee72b054a4